--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ langchain-community>=0.0.350
 langchain-openai>=0.0.350
 chromadb>=0.4.0
 PyPDF2>=3.0.0
+pycryptodome>=3.23.0
 sentence-transformers>=2.2.0
 python-dotenv>=1.0.0
 openai>=1.0.0
